fixed 99% check style