@@ -6,205 +6,226 @@ import com.lgtm.easymoney.models.Transaction;
 import com.lgtm.easymoney.models.User;
 import com.lgtm.easymoney.payload.RequestReq;
 import com.lgtm.easymoney.payload.RequestRsp;
-import com.lgtm.easymoney.services.TransactionService;
 import com.lgtm.easymoney.services.RequestService;
+import com.lgtm.easymoney.services.TransactionService;
 import com.lgtm.easymoney.services.UserService;
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+/**
+ * request service implementation.
+ */
 @Service
 public class RequestServiceImpl implements RequestService {
-    private final TransactionService transactionService;
-    private final UserService userService;
-    @Autowired
-    public RequestServiceImpl(TransactionService transactionService, UserService userService){
-        this.transactionService = transactionService;
-        this.userService = userService;
-    }
-    @Override
-    public boolean existsRequestByID(Long id) {
-        return transactionService.existsTransactionByID(id);
-    }
-    @Override
-    public Transaction getRequestByID(Long id) {
-        return transactionService.getTransactionByID(id);
-    }
-    @Override
-    public Transaction saveRequest(Transaction trans) {
-        return transactionService.saveTransaction(trans);
-    }
-    @Override
-    public List<Transaction> getRequestByUser(User user) {
-        List<TransactionStatus> status = List.of(TransactionStatus.TRANS_PENDING, TransactionStatus.TRANS_DENIED);
-        return transactionService.getAllTransactionsWithUser(user, status);
-    }
-    @Override
-    public ResponseEntity<RequestRsp> getRequestsByUser(User user) {
-        // get params
-//        Long uid = user.getId();
-        // payload
-        RequestRsp res = new RequestRsp();
-        List<Transaction> listTrans = getRequestByUser(user);
-        res.setSuccess(listTrans != null);
-        res.setCurrBalance(user.getBalance());
+  private final TransactionService transactionService;
+  private final UserService userService;
 
-        res.setRequests(transactionService.generateListResponseFromTransactions(listTrans));
-        res.setMessage("Retrieved user's requests!");
-        if (listTrans != null) {
-            return ResponseEntity.status(HttpStatus.OK).body(res);
-        }
-        // TODO refactor this?
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
-    }
-    @Override
-    public List<Transaction> getAllRequests() {
-        return transactionService.getAllTransactions();
-    }
-    @Override
-    public Transaction createARequest(User reqBy, User reqTo, BigDecimal amount, String desc,
-                                  Category category) {
-        // TODO validate input
+  @Autowired
+  public RequestServiceImpl(TransactionService transactionService, UserService userService) {
+    this.transactionService = transactionService;
+    this.userService = userService;
+  }
 
-        Transaction trans = new Transaction();
-        // request: requested by A, requested to B
-        // once accept, money goes from B to A
-        trans.setFrom(reqTo);
-        trans.setTo(reqBy);
-        trans.setAmount(amount);
-        trans.setDescription(desc);
-        trans.setCategory(category);
-        trans.setStatus(TransactionStatus.TRANS_PENDING);
+  @Override
+  public boolean existsRequestById(Long id) {
+    return transactionService.existsTransactionById(id);
+  }
 
-        return transactionService.saveTransaction(trans);
-    }
-    @Override
-    public ResponseEntity<RequestRsp> createARequest(RequestReq req) {
-        // get params
-        Long from_uid = req.getFromUid();      // from = req by
-        Long to_uid = req.getToUid();          // to = req to
-        BigDecimal amount = req.getAmount();
-        Category category = req.getCategory();
-        String desc = req.getDescription();
-        // create a request
-        User from_user = userService.getUserByID(from_uid);
-        User to_user = userService.getUserByID(to_uid);
-        Transaction trans = createARequest(from_user, to_user, amount, desc, category);
-        // payload
-        // todo need to refactor some of these
-        RequestRsp res = new RequestRsp();
-        res.setSuccess(trans != null);
-        res.setCurrBalance(from_user.getBalance());
-        res.setRequests(transactionService.generateListResponseFromTransactions(new ArrayList<>(Arrays.asList(trans))));
-        res.setMessage("Request has been created successfully!");
-        if (trans != null) {
-            return ResponseEntity.status(HttpStatus.OK).body(res);
-        }
-        // TODO refactor this?
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
-    }
-    @Override
-    public boolean validateRequest(Transaction request) {
-        // TODO maybe it's better to handle exceptions here?
-        // TODO validate user?
-        // a valid request = valid users, transaction
-        // status should be pending, otherwise it's
-        // not a valid REQUEST, it's a TRANSFER
-        return existsRequestByID(request.getId());
-    }
-    @Override
-    public boolean acceptRequest(Transaction request) {
-        // here user is reqTo
-        if (!validateRequest(request)) {
-            return false;
-        }
-        // maybe need to refactor this
-        return transactionService.executeTransaction(request);
-    }
-    @Override
-    public boolean declineRequest(Transaction request) {
-        // here user is reqTo
-        if (!validateRequest(request)) {
-            return false;
-        }
-        request.setStatus(TransactionStatus.TRANS_DENIED);
-        transactionService.saveTransaction(request);
-        return true;
-    }
+  @Override
+  public Transaction getRequestById(Long id) {
+    return transactionService.getTransactionById(id);
+  }
 
-    @Override
-    public ResponseEntity<RequestRsp> acceptRequest(Long tid, Long fUid, Long tUid) {
-        // verify
-        boolean valid = existsRequestByID(tid) &&
-                        userService.existsByID(fUid) &&
-                        userService.existsByID(tUid) &&
-                        getRequestByID(tid).getFrom().getId().equals(fUid) &&
-                        getRequestByID(tid).getTo().getId().equals(tUid) &&
-                        getRequestByID(tid).getStatus() == TransactionStatus.TRANS_PENDING;
+  @Override
+  public Transaction saveRequest(Transaction trans) {
+    return transactionService.saveTransaction(trans);
+  }
 
-        // find request
-        Transaction trans = getRequestByID(tid);
-        // accept request
-        acceptRequest(trans);
-        // payload
-        RequestRsp res = new RequestRsp();
-        if (!valid) {
-            res.setSuccess(false);
-            res.setMessage("Invalid params for accepting request.");
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
-        }
-        res.setSuccess(trans != null);
-        res.setCurrBalance(userService.getUserByID(fUid).getBalance());
-        res.setRequests(transactionService.generateListResponseFromTransactions(new ArrayList<>(Arrays.asList(trans))));
-        res.setMessage("Successfully accepted request!");
-        if (trans != null) {
-            return ResponseEntity.status(HttpStatus.OK).body(res);
-        }
-        // TODO refactor this?
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  @Override
+  public List<Transaction> getRequestByUser(User user) {
+    List<TransactionStatus> status =
+            List.of(TransactionStatus.TRANS_PENDING, TransactionStatus.TRANS_DENIED);
+    return transactionService.getAllTransactionsWithUser(user, status);
+  }
+
+  @Override
+  public ResponseEntity<RequestRsp> getRequestsByUser(User user) {
+    // get params
+    // payload
+    RequestRsp res = new RequestRsp();
+    List<Transaction> listTrans = getRequestByUser(user);
+    res.setSuccess(listTrans != null);
+    res.setCurrBalance(user.getBalance());
+
+    res.setRequests(transactionService.generateListResponseFromTransactions(listTrans));
+    res.setMessage("Retrieved user's requests!");
+    if (listTrans != null) {
+      return ResponseEntity.status(HttpStatus.OK).body(res);
     }
+    // TODO refactor this?
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  }
 
-    @Override
-    public ResponseEntity<RequestRsp> declineRequest(Long tid, Long fUid, Long tUid) {
-        // verify
-        boolean valid = existsRequestByID(tid) &&
-                userService.existsByID(fUid) &&
-                userService.existsByID(tUid) &&
-                getRequestByID(tid).getFrom().getId().equals(fUid) &&
-                getRequestByID(tid).getTo().getId().equals(tUid) &&
-                getRequestByID(tid).getStatus() == TransactionStatus.TRANS_PENDING;
+  @Override
+  public List<Transaction> getAllRequests() {
+    return transactionService.getAllTransactions();
+  }
 
-        // find request
-        Transaction trans = getRequestByID(tid);
-        // decline request
-        declineRequest(trans);
-        // payload
-        RequestRsp res = new RequestRsp();
-        // todo we should use refactor this into exception handler
-        if (!valid) {
-            res.setSuccess(false);
-            StringBuilder msg = new StringBuilder("Invalid params for declining request. ");
-            if (trans.getStatus() == TransactionStatus.TRANS_DENIED) {
-                msg.append("Request is already declined.");
-            } else if (trans.getStatus() == TransactionStatus.TRANS_COMPLETE) {
-                msg.append("Request is already completed. ");
-            }
-            res.setMessage(msg.toString());
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
-        }
-        res.setSuccess(trans != null);
-        res.setCurrBalance(userService.getUserByID(fUid).getBalance());
-        res.setRequests(transactionService.generateListResponseFromTransactions(new ArrayList<>(Arrays.asList(trans))));
-        res.setMessage("Successfully declined request!");
-        if (trans != null) {
-            return ResponseEntity.status(HttpStatus.OK).body(res);
-        }
-        // TODO refactor this?
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  @Override
+  public Transaction createRequest(User reqBy, User reqTo, BigDecimal amount, String desc,
+                                   Category category) {
+    // TODO validate input
+
+    Transaction trans = new Transaction();
+    // request: requested by A, requested to B
+    // once accept, money goes from B to A
+    trans.setFrom(reqTo);
+    trans.setTo(reqBy);
+    trans.setAmount(amount);
+    trans.setDescription(desc);
+    trans.setCategory(category);
+    trans.setStatus(TransactionStatus.TRANS_PENDING);
+
+    return transactionService.saveTransaction(trans);
+  }
+
+  @Override
+  public ResponseEntity<RequestRsp> createRequest(RequestReq req) {
+    // get params
+    Long fromUid = req.getFromUid();      // from = req by
+    Long toUid = req.getToUid();          // to = req to
+    BigDecimal amount = req.getAmount();
+    Category category = req.getCategory();
+    String desc = req.getDescription();
+    // create a request
+    User fromUser = userService.getUserById(fromUid);
+    User toUser = userService.getUserById(toUid);
+    Transaction trans = createRequest(fromUser, toUser, amount, desc, category);
+    // payload
+    // todo need to refactor some of these
+    RequestRsp res = new RequestRsp();
+    res.setSuccess(trans != null);
+    res.setCurrBalance(fromUser.getBalance());
+    res.setRequests(transactionService.generateListResponseFromTransactions(
+            new ArrayList<>(Arrays.asList(trans))));
+    res.setMessage("Request has been created successfully!");
+    if (trans != null) {
+      return ResponseEntity.status(HttpStatus.OK).body(res);
     }
+    // TODO refactor this?
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  }
+
+  @Override
+  public boolean validateRequest(Transaction request) {
+    // TODO maybe it's better to handle exceptions here?
+    // TODO validate user?
+    // a valid request = valid users, transaction
+    // status should be pending, otherwise it's
+    // not a valid REQUEST, it's a TRANSFER
+    return existsRequestById(request.getId());
+  }
+
+  @Override
+  public boolean acceptRequest(Transaction request) {
+    // here user is reqTo
+    if (!validateRequest(request)) {
+      return false;
+    }
+    // maybe need to refactor this
+    return transactionService.executeTransaction(request);
+  }
+
+  @Override
+  public ResponseEntity<RequestRsp> acceptRequest(Long tid, Long fuid, Long tuid) {
+    // verify
+    boolean valid = existsRequestById(tid)
+            && userService.existsById(fuid)
+            && userService.existsById(tuid)
+            && getRequestById(tid).getFrom().getId().equals(fuid)
+            && getRequestById(tid).getTo().getId().equals(tuid)
+            && getRequestById(tid).getStatus() == TransactionStatus.TRANS_PENDING;
+
+    // find request
+    Transaction trans = getRequestById(tid);
+    // accept request
+    acceptRequest(trans);
+    // payload
+    RequestRsp res = new RequestRsp();
+    if (!valid) {
+      res.setSuccess(false);
+      res.setMessage("Invalid params for accepting request.");
+      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+    }
+    res.setSuccess(trans != null);
+    res.setCurrBalance(userService.getUserById(fuid).getBalance());
+    res.setRequests(transactionService.generateListResponseFromTransactions(
+            new ArrayList<>(Arrays.asList(trans))));
+    res.setMessage("Successfully accepted request!");
+    if (trans != null) {
+      return ResponseEntity.status(HttpStatus.OK).body(res);
+    }
+    // TODO refactor this?
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  }
+
+  @Override
+  public boolean declineRequest(Transaction request) {
+    // here user is reqTo
+    if (!validateRequest(request)) {
+      return false;
+    }
+    request.setStatus(TransactionStatus.TRANS_DENIED);
+    transactionService.saveTransaction(request);
+    return true;
+  }
+
+
+
+
+  @Override
+  public ResponseEntity<RequestRsp> declineRequest(Long tid, Long fuid, Long tuid) {
+    // verify
+    boolean valid = existsRequestById(tid)
+            && userService.existsById(fuid)
+            && userService.existsById(tuid)
+            && getRequestById(tid).getFrom().getId().equals(fuid)
+            && getRequestById(tid).getTo().getId().equals(tuid)
+            && getRequestById(tid).getStatus() == TransactionStatus.TRANS_PENDING;
+
+    // find request
+    Transaction trans = getRequestById(tid);
+    // decline request
+    declineRequest(trans);
+    // payload
+    RequestRsp res = new RequestRsp();
+    // todo we should use refactor this into exception handler
+    if (!valid) {
+      res.setSuccess(false);
+      StringBuilder msg = new StringBuilder("Invalid params for declining request. ");
+      if (trans.getStatus() == TransactionStatus.TRANS_DENIED) {
+        msg.append("Request is already declined.");
+      } else if (trans.getStatus() == TransactionStatus.TRANS_COMPLETE) {
+        msg.append("Request is already completed. ");
+      }
+      res.setMessage(msg.toString());
+      return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+    }
+    res.setSuccess(trans != null);
+    res.setCurrBalance(userService.getUserById(fuid).getBalance());
+    res.setRequests(transactionService.generateListResponseFromTransactions(
+            new ArrayList<>(Arrays.asList(trans))));
+    res.setMessage("Successfully declined request!");
+    if (trans != null) {
+      return ResponseEntity.status(HttpStatus.OK).body(res);
+    }
+    // TODO refactor this?
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(res);
+  }
 }
